# mnemosys-core

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: standards-and-conventions.md
docs/architecture/: MNEMOSYS_Infrastructure_and_Platform_Decisions.md
docs/decisions/: 0001-repo-structure.md
docs/design/: Development_Branching_Deployment_Model_v0.1.md  Development_Release_Versioning_Policy_v0.1.md  Philosophy_v0.3.md  Source_Code_Management_Guidelines_v0.1.md
docs/diagrams/: data-model.md
docs/plans/: 2025-12-30-domain-model-v2-design.md  2025-12-31-ci-hard-gates-next-steps.md  2025-12-31-data-model-diagram-generation-design.md  2025-12-31-github-actions-ci-design.md  2025-12-31-github-actions-ci-implementation.md  2025-12-31-repo-review-differences.md
docs/project/draft/: Architecture_Standards_and_Conventions.md  Baseline_Visual_Specification.md  Canonical_Exercise_Library.md  Design_Overview.md  Logging_State_Model.md  Mesocycle_Deload_Strategy.md  RPM_Design_Overview.md  Session_Generator_Walkthrough.md  UI_UX_Design.md
docs/project/final/: AI_Assisted_Development_Approach.md  AI_Code_Review_Guidelines.md  Development_Branching_Deployment_Model.md  Development_Hotfix_Policy.md  Source_Code_Management_Guidelines.md
scripts/dev/: bootstrap_db.py  generate_diagram.py  validate_local.py
src/mnemosys_core/api/: __init__.py  app.py  dependencies.py
src/mnemosys_core/api/routers/: __init__.py  exercises.py  health.py  instruments.py  practices.py  sessions.py
src/mnemosys_core/api/schemas/: __init__.py  exercises.py  instruments.py  practices.py  sessions.py
src/mnemosys_core/config/: environments.py  settings.py
src/mnemosys_core/db/: base.py  engine.py  session.py  types.py
src/mnemosys_core/db/models/: __init__.py  exercise.py  exercise_instance.py  exercises.py  instrument.py  instruments.py  overload_dimension.py  overload_dimensions.py  practice.py  practice_block.py  session_block.py  sessions.py  technique.py  techniques.py  tuning.py  tunings.py
src/mnemosys_core/migrations/: README.md  env.py
src/mnemosys_core/util/: time.py
tests/: conftest.py  test_code_compliance.py
tests/api/: test_dependencies.py  test_exercises.py  test_health.py  test_instruments.py  test_practices.py  test_sessions.py
tests/config/: __init__.py  test_environments.py  test_settings.py
tests/db/: test_engine.py  test_exercise_instance.py  test_exercise_log.py  test_exercise_overload_dimension_relationship.py  test_exercise_state_relationship.py  test_exercise_technique_relationship.py  test_instrument_polymorphism.py  test_instrument_technique_relationship.py  test_instrument_tuning_relationship.py  test_metadata.py  test_models_smoke.py  test_overload_dimension_model.py  test_technique_model.py  test_tuning_polymorphism.py  test_types.py
tests/util/: test_time.py
