[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mnemosys-core"
version = "0.1.0"
description = "Core backend for the MNEMOSYS system"
authors = ["Phillip Moore <w.phillip.moore@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "mnemosys_core", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "*"
alembic = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
pytest-xdist = "*"
poetry = "^2"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v"
